Checkpoint work for 8 done

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -2,18 +2,8 @@ body.landing {
 	background-color: rgb(58,23,63);         /* sets the background color to an RGB value (see below) */
 }
 
-.navbar {
-	padding: 0.5rem;
-	background-color: rgb(101,18,95);
-}
-
-.navbar .logo {
-	position: relative;                      /* positioning will be explained in a resource */
-	left: 2rem;
-}
-
 .hero-content {
-	position: relative;                      /* positioning will be explained in a resource */
+	position: relative;                      
 	min-height: 600px;                       /* hero content element must be _at least_ 600 pixels */
 	background-image: url(../assets/images/bloc_jams_bg.jpg); 
 	background-repeat: no-repeat;
@@ -22,8 +12,8 @@ body.landing {
 }
 
  .hero-content .hero-title {
-     position: absolute;                     /* positioning will be explained in a resource */
-     top: 40%;                               /* positioning will be explained in a resource */
+     position: absolute;                   
+     top: 40%;                               
      -webkit-transform: translateY(-50%);
      -moz-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
@@ -39,14 +29,10 @@ body.landing {
 
 .selling-points {
 	position: relative;
-	display: table;
-	width: 100%;
 }
 
 .point {
-	display: table-cell;
 	position: relative;
-	width: 33.3%;
 	padding: 2rem;
 	text-align: center;
 }
