--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ body {
     color: rgb(233,50,117);
 }
 
-.links-container .navbar-link:active {
+.links-container:active {
     background-color: white;
     color: rgb(233,50,117);
 }
