--- a/styles/landing.css
+++ b/styles/landing.css
@@ -36,15 +36,15 @@ body.landing {
 	padding: 2rem;
 	text-align: center;
     opacity: 0;
-    -webkit-transform: scaleX(0.9) translateY(3rem);
-    -moz-transform: scaleX(0.9) translateY(3rem);
-    transform: scaleX(0.9) translateY(3rem);
-    -webkit-transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in-out;
-    -webkit-transition-delay: 0.2s;
-    -moz-transition-delay: 0.2s;
-    transition-delay: 0.2s;
+    -webkit-transform: scaleX(0.97) translateY(-1rem);
+    -moz-transform: scaleX(0.97) translateY(-1rem);
+    transform: scaleX(0.97) translateY(-1rem);
+    -webkit-transition: all 0.30s ease-out;
+    -moz-transition: all 0.30s ease-out;
+    transition: all 0.30s ease-out;
+    -webkit-transition-delay: 0.3s;
+    -moz-transition-delay: 0.3s;
+    transition-delay: 0.3s;
 }
 
 .point .point-title {
